# slugger

./: .ghci  CHANGELOG.md  LICENSE  README.md  flake.nix  slugger.cabal
.github/workflows/: main.yml
app/: Main.hs
lib/: Slugger.hs
lib/Data/String/: Slugger.hs
lib/Data/Text/: Slugger.hs
test/: SluggerTest.hs
